--- a/index.html
+++ b/index.html
@@ -309,23 +309,13 @@
                           :style="{color: styles.footer.textColor}"
                         >
                           Copyright &copy; {{(new Date().getFullYear())}}, All rights reserved. <br />
-                          NOTICE: This message is only to be read by the addressee and is not for public distribution. The sender is not responsible for distribution of this
-                          message beyond the addressee intended. All information in this message is confidential to the addressee and should be treated as such. To ensure that
-                          trading instructions are received and executed timely and accurately, please do not send any trading instructions via e-mail. Please contact directly by
-                          phone.<br />
+                          NOTICE: This message is only to be read by the addressee and is not for public distribution. The sender is not responsible for distribution of this message beyond the addressee intended. All information in this message is confidential to the addressee and should be treated as such. <br />
                           <br />
-                          This is not an official publication of Manulife Securities. The information contained herein was obtained from sources believed to be reliable; however,
-                          no representation or warranty, express or implied, is made by the writer, Manulife Securities, or any other person as to its accuracy, completeness, or
-                          correctness. The opinions expressed are those of the author and may not necessarily reflect those of Manulife Securities Incorporated, Manulife Securities
-                          Investment Services Inc. and/or Manulife Securities Insurance Inc. (“Manulife Securities”).<br />
+                          To ensure that trading instructions are received and executed timely and accurately, please do not send any trading instructions via e-mail. <span v-if="settings.footer.preset.phone">Please contact directly at {{settings.footer.preset.phone}}.</span><span v-else>Please contact directly by phone.</span><br />
                           <br />
-                          The persons and situations depicted are fictional and their resemblance to anyone living or dead is purely coincidental. This media is for information
-                          purposes only and is not intended to provide specific financial, tax, legal, accounting or other advice and should not be relied upon in that regard.
-                          Manulife Securities is an indirectly, wholly-owned subsidiary of Manulife Financial Corporation (MFC). MFC owns The Manufacturers Life Insurance Company
-                          (MLI), a financial services organization offering a range of protection, estate planning, investment and banking solutions through a multi-channel
-                          distribution network. MLI owns Manulife Securities Incorporated, Manulife Securities Investment Services Inc. and Manulife Securities Insurance Inc. MLI
-                          also owns Manulife Bank of Canada, a federally chartered Schedule 1 bank, which in turns owns Manulife Trust Company, a federally chartered trust company.
-                          Please confirm with your advisor which company you are dealing with for each of your products and services.<br />
+                          The Advisor(s), Manulife Securities Incorporated, Manulife Securities Investment Services Inc. and/or Manulife Securities Insurance Inc. (“Manulife Securities”) do not make any representation that the information in any linked site and/or 3rd party articles is accurate and will not accept any responsibility or liability for any inaccuracies in the information not maintained by them, such as 3rd party articles and/or linked sites.
+This is not an official publication of Manulife Securities. The views, opinions and recommendations are those of the author alone and they may not necessarily be those of Manulife Securities. This publication is not an offer to sell or a solicitation of an offer to buy any securities. 
+<br />
                           <br />
                           <span v-if="settings.footer.preset.disclaimer.licenses.mfda">Mutual funds are offered through Manulife Securities Investment Services Inc. </span>
                           <span v-if="settings.footer.preset.disclaimer.licenses.iiroc"
@@ -1209,23 +1199,13 @@
             <h3 class="card-title">Use Manulife Securities Disclaimer in Footer Preset</h3>
             <p><small>
                 Copyright &copy; {{(new Date().getFullYear())}}, All rights reserved. <br />
-                NOTICE: This message is only to be read by the addressee and is not for public distribution. The sender is not responsible for distribution of this
-                message beyond the addressee intended. All information in this message is confidential to the addressee and should be treated as such. To ensure that
-                trading instructions are received and executed timely and accurately, please do not send any trading instructions via e-mail. Please contact directly by
-                phone.<br />
+                NOTICE: This message is only to be read by the addressee and is not for public distribution. The sender is not responsible for distribution of this message beyond the addressee intended. All information in this message is confidential to the addressee and should be treated as such. <br />
                 <br />
-                This is not an official publication of Manulife Securities. The information contained herein was obtained from sources believed to be reliable; however,
-                no representation or warranty, express or implied, is made by the writer, Manulife Securities, or any other person as to its accuracy, completeness, or
-                correctness. The opinions expressed are those of the author and may not necessarily reflect those of Manulife Securities Incorporated, Manulife Securities
-                Investment Services Inc. and/or Manulife Securities Insurance Inc. (“Manulife Securities”).<br />
+                To ensure that trading instructions are received and executed timely and accurately, please do not send any trading instructions via e-mail. Please contact directly at [PHONE]<br />
                 <br />
-                The persons and situations depicted are fictional and their resemblance to anyone living or dead is purely coincidental. This media is for information
-                purposes only and is not intended to provide specific financial, tax, legal, accounting or other advice and should not be relied upon in that regard.
-                Manulife Securities is an indirectly, wholly-owned subsidiary of Manulife Financial Corporation (MFC). MFC owns The Manufacturers Life Insurance Company
-                (MLI), a financial services organization offering a range of protection, estate planning, investment and banking solutions through a multi-channel
-                distribution network. MLI owns Manulife Securities Incorporated, Manulife Securities Investment Services Inc. and Manulife Securities Insurance Inc. MLI
-                also owns Manulife Bank of Canada, a federally chartered Schedule 1 bank, which in turns owns Manulife Trust Company, a federally chartered trust company.
-                Please confirm with your advisor which company you are dealing with for each of your products and services.<br />
+                The Advisor(s), Manulife Securities Incorporated, Manulife Securities Investment Services Inc. and/or Manulife Securities Insurance Inc. (“Manulife Securities”) do not make any representation that the information in any linked site and/or 3rd party articles is accurate and will not accept any responsibility or liability for any inaccuracies in the information not maintained by them, such as 3rd party articles and/or linked sites.
+                This is not an official publication of Manulife Securities. The views, opinions and recommendations are those of the author alone and they may not necessarily be those of Manulife Securities. This publication is not an offer to sell or a solicitation of an offer to buy any securities. 
+                <br />
                 <br />
                 Legal and Disclaimers | Privacy Policy</small>
             </p>
